--- a/Italy.html
+++ b/Italy.html
@@ -494,7 +494,7 @@
 						</td>
 						<td>
 							<ul>
-								<li><a href="#">English</a></li>
+								<li><a href="#">French</a></li>
 								<li><a href="#">Hindi</a></li>
 							</ul>
 						</td>
